src/test/deca/context/valid/created/objet/new2.deca
// Description :
//      test de verification de l'affectation de classe avec extends
// Resultats :
//      ok

class A {
     int x;

}

class B extends A {
    
}

{

    A a = new B();

    
}