src/test/deca/context/invalid/created/objet/new2.deca
// Description :
//      test de verification de l'affectation de classe avec extends
// Resultats :
//      Ligne 18 : affectation incompatible

class A {
     int x;

}

class B extends A {
    

}

{

    B b = new A();  
}